# lastsolve

./: COOKBOOK.md  README.md  pyproject.toml
lastsolve/: __init__.py  accelerate.py  adapters.py  audit.py  identify.py  multiparam.py  results.py  spectral_id.py  surrogate.py  timeprop.py  walls.py
tests/: test_api_polish.py  test_ic_transfer.py  test_lastsolve.py  test_v1_features.py
